# litgpt-finetuning

./: .gitignore  README.md  fintetuning_tinyllama.ipynb  pyproject.toml
