[tool.poetry]
name = "litgpt-finetuning"
version = "0.1.0"
description = ""
authors = ["Ibrahim Ouedraogo <ibrahim.ouedraogo@umontreal.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litgpt = "^0.4.10"
lm-eval = "^0.4.3"
wandb = "^0.17.7"
ipywidgets = "^8.1.3"
ipykernel = "^6.29.5"
transformers = "^4.44.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
